--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
 requests==2.30.0
+stocksymbol==0.0.5
 urllib3==2.0.2
 Werkzeug==2.3.4
 zipp==3.15.0
