--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,33 @@
+appdirs==1.4.4
+beautifulsoup4==4.12.2
 blinker==1.6.2
 certifi==2023.5.7
+cffi==1.15.1
 charset-normalizer==3.1.0
 click==8.1.3
+cryptography==40.0.2
 Flask==2.3.2
+frozendict==2.3.8
+html5lib==1.1
 idna==3.4
 importlib-metadata==6.6.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+lxml==4.9.2
 MarkupSafe==2.1.2
+multitasking==0.0.11
+numpy==1.24.3
+pandas==2.0.1
+pycparser==2.21
+python-dateutil==2.8.2
+pytz==2023.3
 requests==2.30.0
+six==1.16.0
+soupsieve==2.4.1
 stocksymbol==0.0.5
+tzdata==2023.3
 urllib3==2.0.2
+webencodings==0.5.1
 Werkzeug==2.3.4
+yfinance==0.2.18
 zipp==3.15.0
